manifests/0000_30_cluster-api_00_tombstones-4.22-tpnu.yaml
# Tombstones for TPNU objects that were removed or renamed during the 4.22
# development cycle. This is only relevant to TPNU clusters which are upgraded
# despite the 'NU' in TPNU meaning 'No Upgrade'. Yeah.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-capi-operator
  namespace: openshift-cluster-api
  annotations:
    release.openshift.io/delete: "true"
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    release.openshift.io/feature-gate: "ClusterAPIMachineManagement"
    capability.openshift.io/name: ClusterAPI
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cluster-capi-operator
  annotations:
    release.openshift.io/delete: "true"
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    release.openshift.io/feature-gate: "ClusterAPIMachineManagement"
    capability.openshift.io/name: ClusterAPI
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    release.openshift.io/delete: "true"
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    release.openshift.io/feature-gate: "ClusterAPIMachineManagement"
    capability.openshift.io/name: ClusterAPI
  name: cluster-capi-operator-webhook-service
  namespace: openshift-cluster-api
